_generated-doc/2.7/config/quarkus-vertx-graphql-general-config-items.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-graphql-general-config-items_configuration]]link:#quarkus-vertx-graphql-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-graphql-general-config-items_quarkus.vertx-graphql.ui.always-include]]`link:#quarkus-vertx-graphql-general-config-items_quarkus.vertx-graphql.ui.always-include[quarkus.vertx-graphql.ui.always-include]`

[.description]
--
If GraphQL UI should be included every time. By default this is only included when the application is running in dev mode.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-graphql-general-config-items_quarkus.vertx-graphql.ui.path]]`link:#quarkus-vertx-graphql-general-config-items_quarkus.vertx-graphql.ui.path[quarkus.vertx-graphql.ui.path]`

[.description]
--
The path where GraphQL UI is available. 
 The value `/` is not allowed as it blocks the application from serving anything else.
--|string 
|`graphql-ui`

|===